Fetch data and rendere it in multiple components

--- a/src/Components/searchBar.css
+++ b/src/Components/searchBar.css
@@ -37,7 +37,7 @@
     height: 70px;
     border-radius: 50%;
     border: none;
-    background-color: blueviolet;
+    background-color: rgb(117, 22, 205);
     margin-left:15px;
     cursor: pointer;
 }
