--- a/src/Components/moviecard.css
+++ b/src/Components/moviecard.css
@@ -11,6 +11,11 @@ padding: 0;
     height: 17rem;
     border-radius: 10px;
 }
+.imgPre{
+    width: 11.5rem;
+    height: 17rem;
+
+}
 .title{
     display: block;
     font-weight: 600;
@@ -40,4 +45,20 @@ padding: 0;
     padding: 0px 4px 0px 2px;
     margin-bottom: 2px;
 
+}
+.playBtn{
+    width: 4rem ;
+    height: 4rem;
+    border:none;
+    border-radius: 50%;
+    background-color: rgb(183, 124, 183);
+    cursor: pointer;
+}
+.hoverBtn{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
 }
