--- a/src/Components/moviecard.css
+++ b/src/Components/moviecard.css
@@ -6,20 +6,53 @@ padding: 0;
     width: 200px;
     height: 360px;
 }
+
 .imgPre img{
     width: 11.5rem;
     height: 17rem;
     border-radius: 10px;
+    cursor: pointer;
 }
 .imgPre{
+    position: relative;
     width: 11.5rem;
     height: 17rem;
+    
+}
+.imgPre:hover > .hoverImg{
+    opacity: 1;
+}
+.hoverImg{
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #55555557;
+    border-radius: 10px;
+    /* z-index: -1; */
+    opacity: 0;
+    transition: all .3s;
+    
+    cursor: pointer;
+}
+.play{
+    cursor: pointer;    
+    width: 4rem;
+    height: 4rem;
+    border-radius: 50%;
+    border: none;
+    background-color: rgb(191, 83, 215);
 
 }
 .title{
     display: block;
-    font-weight: 600;
+    font-weight: 500;   
+    letter-spacing: 1px;
     margin-bottom: 5px;
+    cursor: pointer;
 }
 .cardMinorDetails{
     display: flex;
