Did some state managment sing Context Api

--- a/src/Components/searchBar.css
+++ b/src/Components/searchBar.css
@@ -38,7 +38,7 @@
     height: 70px;
     border-radius: 50%;
     border: none;
-    background-color: rgb(117, 22, 205);
+    background-color: var(--main-color);
     margin-left:15px;
     cursor: pointer;
 }
