Add error page and set Genres to the error Page.Also Added a practice Page

--- a/src/Components/css/moviecard.css
+++ b/src/Components/css/moviecard.css
@@ -17,6 +17,8 @@ padding: 0;
     position: relative;
     width: 11.5rem;
     height: 17rem;
+    background-color: grey;
+    border-radius: 10px;
     
 }
 .imgPre:hover > .hoverImg{
