--- a/src/Components/css/infoCard.css
+++ b/src/Components/css/infoCard.css
@@ -56,6 +56,7 @@
     color: white;
     background-color: rgb(75, 75, 75);
     letter-spacing: 1px;
+    cursor: pointer;
 }
 .likeDislikeContainer > :first-child{
     background-color:rgb(183, 124, 183) ;
