--- a/src/Components/css/navbar.css
+++ b/src/Components/css/navbar.css
@@ -24,16 +24,8 @@
 .navLinks{
     display: flex;
     flex-direction: row;
-     padding : 0px 250px;
-}
-.navLink{
-  text-decoration: none;
-  list-style: none;
-  color: white;
-  cursor: pointer;
-  font-weight: 400;
-  font-size: 14px;
-  padding: 10px 10px;
+    /* padding : 0px 10rem; */
+    width: 100%;
 }
 #login{
     margin: 10px;
@@ -42,12 +34,4 @@
     height: 35px;
     border-radius: 4px;
     cursor: pointer;
-}
-
-#navbar p{
-    text-align: center;
-    font-size: 34px;
-    font-weight: 100;
-    color: white;
-    margin-top: 30px;
 }
